# vendored

./: modules.txt
github.com/emicklei/dot/: BUILD.bazel
